tests/miniJava/neg/006759_mutation.MiniJava
class java length { public static void Main ( String [ ] java ) { { } } }
